# aries-acapy-plugin-redis-events

./: .gitignore  .pre-commit-config.yml  COMPLIANCE.yaml  LICENSE  README.md  definition.py  pyproject.toml  setup.cfg  setup.py  status_endpoints.py
.github/workflows/: code-quality-check.yml  tests.yml
deliverer/: Dockerfile  __init__.py  deliver.py  docker-compose.yml  pyproject.toml
deliverer/tests/: test_deliver.py
demo/: README.md  acapy-endpoint.sh  docker-compose.relay.yml  docker-compose.yml
demo/configs/: agency-redis-mediator.yml  agency-redis.yml  agency.yml  mediator.yml
demo/setup/: Dockerfile  main.py  pyproject.toml
demo/setup/p3x-redis-ui-settings/: .p3xrs-conns.json
docker/: .env-example  Dockerfile  Dockerfile.test  README.md  default.yml  docker-compose.yml  plugins-config.yaml  plugins-config.yml
docker/scripts/: run_tests
docs/: docker-compose-agents-relay.yml  plugin-config-mediator.yml  plugin-config.yml
docs/aries_loadgenerator/: .env.example  docker-compose-agents-mediator.yml  redis.conf
int/: Dockerfile.test.runner  README.md  docker-compose.yml
int/data/p3x-redis-ui-settings/: .p3xrs-conns.json
int/tests/: conftest.py  test_events.py  test_redis_basic.py
integeration-test/: pyproject.toml
redis_deliverer/: Dockerfile  pyproject.toml
redis_deliverer/deliver/: __init__.py  deliver.py
redis_deliverer/deliver/tests/: test_deliver.py
redis_queue/: README.md  __init__.py  config.py  definition.py  outbound.py
redis_queue/events/: __init__.py
redis_queue/tests/: test_inbound.py
redis_queue/v1_0/: __init__.py  config.py  inbound.py  outbound.py  utils.py
redis_queue/v1_0/events/: __init__.py  events.py
redis_queue/v1_0/events/tests/: test_events.py
redis_queue/v1_0/tests/: test_events.py  test_inbound.py  test_outbound.py
redis_relay/: Dockerfile  pyproject.toml  setup.cfg  setup.py
redis_relay/relay/: relay.py
redis_relay/relay/tests/: test_relay.py
relay/: Dockerfile  __init__.py  docker-compose.yml  pyproject.toml  relay.py  status_endpoints.py
relay/tests/: test_relay.py
status_endpoint/: status_endpoints.py
