[tool.poetry]
name = "redis_queue"
version = "0.1.0"
description = "ACA-Py Redis Event and Message Queue"
authors = ["Shaanjot Gill <gill.shaanjots@gmail.com>"]
maintainers = [
    "Shaanjot Gill <gill.shaanjots@gmail.com>",
]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/bcgov/aries-acapy-plugin-redis-events"
repository = "https://github.com/bcgov/aries-acapy-plugin-redis-events"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent"
]
packages = [
    { include = "redis_queue" }
]
[tool.poetry.dependencies]
python = "^3.6.9"
aries-cloudagent = "^0.7.3rc0"
ecdsa = "^0.16.1"
redis = "^4.1.4"
pydantic = "^1.8.2"

[tool.poetry.dev-dependencies]
black = "^21.4b2"
flake8 = "^3.9.1"
pre-commit = "^2.12.1"
pytest = "^6.2.3"
pytest-asyncio = "^0.15.1"
pytest-mock = "^3.6.1"
asynctest = "0.13.0"
rope = "^0.19.0"

[build-system]
requires = ["setuptools", "poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = [
    "tests"
]
