[tool.poetry]
name = "redis_deliverer"
version = "0.1.0"
description = "Deliver outbound messages from ACA-Py (Redis Queue)"
authors = ["Shaanjot Gill <gill.shaanjots@gmail.com>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.9"
aiohttp = "^3.7.4"
redis = "^4.1.4"
pydantic = "^1.8.2"
fastapi = "^0.68.0"
uvicorn = "0.16.0"
nest-asyncio = "^1.5.5"

[tool.poetry.dev-dependencies]
black = "^21.9b0"
flake8 = "^3.9.2"
pre-commit = "^2.15.0"
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
